0. Сортировка [#10096]